syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.devolpex.backend.stubs.shared";

// Pageable message definition
message PageablePRT {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    int64 offset = 3;
    bool paged = 4;
    bool unpaged = 5;
    SortPRT sort = 6;
}

// Sort message definition
message SortPRT {
    bool sorted = 1;
    bool unsorted = 2;
    bool empty = 3;
}